--- a/liwos/assets/css/main.css
+++ b/liwos/assets/css/main.css
@@ -42,13 +42,13 @@ blockquote, q {
 }
 
 	q {quotes: "\201E" "\201D";}
-q:before {content: open-quote; font-family: Arial;} 
-q:after {content: close-quote; font-family: Arial;}
+q:before {content: open-quote; font-family: "Times New Roman";} 
+q:after {content: close-quote; font-family: "Times New Roman";}
 
 blockquote {quotes: "\201E" "\201D";} 
-blockquote:before {content: open-quote; font-family: Arial;} 
-blockquote:after {content: close-quote; font-family: Arial;} 
-/* font 'Arial' geeft de mooiste (gekrulde) aanhalingstekens */
+blockquote:before {content: open-quote; font-family: "Times New Roman";} 
+blockquote:after {content: close-quote; font-family: "Times New Roman";} 
+/* font 'Times New Roman' geeft de mooiste (gekrulde) aanhalingstekens met voldoende afstand tot de omringende letters of volgende zin */
 
 
 table {
